--- a/Proyecto1_Fase2/frontend/package.json
+++ b/Proyecto1_Fase2/frontend/package.json
@@ -12,10 +12,10 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:4000"
 }
