--- a/Proyecto1_Fase2/docker-compose.yml
+++ b/Proyecto1_Fase2/docker-compose.yml
@@ -2,39 +2,40 @@ version: '3.9'
 
 services:
 
-  agentemonitor:
-    image: josmalopez/agentemonitor:1       # Usamos  directamente la imagen local ya creada
-    depends_on:
-      - mysql
+  monitor:
+    image: josmalopez/monitor:1.1       # Usamos  directamente la imagen local ya creada
 
+  api_python:
+      image: josmalopez/api_python:1.1
+      restart: always
+      ports:
+        - "3001:3001"
+      depends_on:
+        - monitor
 
-  api-sopes1:
-    image: josmalopez/api-sopes1:1
-    restart: always
-    ports:
-      - "3000:3000"
-    depends_on:
-      - mysql
-      - agentemonitor
+  api_rest:
+      image: josmalopez/api_rest:1.1
+      restart: always
+      ports:
+        - "3002:3002"
+      depends_on:
+        - monitor
 
+  socket:
+      image: josmalopez/socket:1.0
+      restart: always
+      ports:
+        - "4000:4000"
+      depends_on:
+        - api_rest
+        - api_python
 
-  frontend-sopes1:
-    image: josmalopez/frontend-sopes1:1
-    ports:
-      - "3001:3001"
-    depends_on:
-      - api-sopes1
-  mysql:
-    image: mysql:8.0
-    container_name: mysql
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: 123456
-      MYSQL_DATABASE: monitor_db
-    volumes:
-      - mysql_data:/var/lib/mysql
-    ports:
-      - "3306:3306"
-volumes:
-  mysql_data:
+  frontend:
+      image: josmalopez/frontend:1.1
+      restart: always
+      ports:
+        - "3000:3000"
+      depends_on:
+        - socket
+  
 
