--- a/Proyecto1_Fase2/frontend/Dockerfile
+++ b/Proyecto1_Fase2/frontend/Dockerfile
@@ -1,9 +1,9 @@
-
 FROM node:20-alpine
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-EXPOSE 3000
-CMD ["npm", "start"]
+RUN npm run build
+RUN npm install -g serve
+EXPOSE $PORT
+CMD ["serve", "-s", "build", "-l", "$PORT"]
