--- a/Proyecto1_Fase2/frontend/Dockerfile
+++ b/Proyecto1_Fase2/frontend/Dockerfile
@@ -1,9 +1,26 @@
-FROM node:20-alpine
+# Etapa 1: Build de la app React
+FROM node:20-alpine AS builder
 WORKDIR /app
+
+# Instala dependencias
 COPY package*.json ./
 RUN npm install
+
+# Copia el resto de archivos y construye
 COPY . .
 RUN npm run build
+
+# Etapa 2: Producción con "serve"
+FROM node:20-alpine
+WORKDIR /app
+
+# Instala "serve" globalmente para servir el contenido estático
 RUN npm install -g serve
-EXPOSE $PORT
-CMD ["serve", "-s", "build", "-l", "$PORT"]
+
+# Copia la build desde la etapa anterior
+COPY --from=builder /app/build ./build
+
+# Usa el script start: serve -s build -l $PORT
+EXPOSE 8080
+ENV PORT 8080
+CMD ["serve", "-s", "build", "-l", "8080"]
