--- a/Proyecto1_Fase2/Kubernetes/api-soclet.yaml
+++ b/Proyecto1_Fase2/Kubernetes/api-soclet.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: socket-deployment
+  namespace: so1-fase2  # Agregar namespace
 spec:
   replicas: 1
   selector:
@@ -22,6 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: socket-service
+  namespace: so1-fase2  # Agregar namespace
 spec:
   selector:
     app: socket
