--- a/Proyecto1_Fase2/Kubernetes/ingress-main.yaml
+++ b/Proyecto1_Fase2/Kubernetes/ingress-main.yaml
@@ -1,4 +1,4 @@
-# ingress-main.yaml (principal, apunta a la API de Python)
+# Ingress principal para API Python
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -11,6 +11,7 @@ spec:
   rules:
     - http:
         paths:
+          # Ruta para API Python
           - path: /api(/|$)(.*)
             pathType: ImplementationSpecific
             backend:
@@ -18,8 +19,17 @@ spec:
                 name: api-python-service
                 port:
                   number: 80
+
+          # Ruta para WebSocket
+          - path: /socket
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: socket-service
+                port:
+                  number: 4000
 ---
-# ingress-canary.yaml (canary, reparte tráfico a API de Node.js)
+# Ingress canary para API NodeJS
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -28,7 +38,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/canary: "true"
-    nginx.ingress.kubernetes.io/canary-weight: "50"  # Cambia a 30 para 30%, etc.
+    nginx.ingress.kubernetes.io/canary-weight: "50"
 spec:
   ingressClassName: nginx
   rules:
